--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,6 +1,6 @@
-// Подключение базовых настроек
-@import 'settings'
-// Подключение переменных
-@import 'variables'
-// Подключение normalize
-@import 'normalize'
+*
+  box-sizing: border-box
+
+.swiper
+  width: 600px
+  height: 300px
